apps/jaeger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /jaeger(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: jaeger-demo-query
              port:
                number: 16686
